Wed Jan 14 18:06:06 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* lib/uri/mailto.rb: raising URI::InvalidComponentError instead
	  of failing with undefined method `split' for nil:NilClass for
	  mailto: URIs without opaque part. [Bug #10738]
	* test/uri/testuri.rb: Test for above

Wed Jan 14 16:45:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/downloader.rb (RubyGems.download): verify downloaded gem
	  packages.  LowSecurity to allow untrusted certificates now.

Wed Jan 14 15:43:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_s_refresh_line): initialize
	  before rl_refresh_line(), as some function make the internal
	  state non-clean but rl_refresh_line() does not re-initialize it.
	  [ruby-core:43957] [Bug #6232]

Tue Jan 13 21:59:24 2015  Michal Papis  <mpapis@gmail.com>

	* tool/rbinstall.rb (gem): fix changing permissions of installed
	  bundled gems.  [Fix GH-812]

Tue Jan 13 21:57:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (distclean-local): remove autom4te.cache generated by
	  autoconf.

	* common.mk (realclean-local): remove id sources and dummy header
	  for dtrace.  [ruby-core:67562] [Bug #10737]

Tue Jan 13 21:08:22 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json, test/json: merge JSON HEAD(259dee6)
	  separate imprementation of Typed_Data macro.
	  https://github.com/flori/json/compare/v1.8.1...v1.8.2

Tue Jan 13 14:16:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/net/http/test_http.rb: get rid of accessing DNS actually
	  for some servers returning wrong results.
	  [ruby-core:67454] [Bug #10721]

Mon Jan 12 23:21:57 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* gems/bundled_gems: update test-unit to 3.0.9.

Mon Jan 12 18:35:44 2015  Eric Wong  <e@80x24.org>

	* numeric.c (bit_coerce): use original value for error message
	  [ruby-core:67405] [Bug #10711]
	* test/ruby/test_numeric.rb (test_coerce): check error message
